--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -20,8 +20,8 @@
 }
 
 .callback {
-  max-width: 440px;
-  min-height: 533px;
+  max-width: 436px;
+  min-height: 540px;
   background: #fff;
   display: flex;
   flex-direction: column;
@@ -46,14 +46,15 @@
   &__header {
     font-weight: 700;
     font-size: 24px;
-    padding-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   &__label {
     padding-top: 10px;
     padding-bottom: 5px;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
+    font-family: "roboto"
   }
 
   &__input-container {
@@ -66,22 +67,26 @@
     position: absolute;
     width: 30px;
     height: 30px;
-    right: 10px;
-    top: 20px;
+    right: 13px;
+    top: 7px;
   }
 
 
   &__question {
     font-weight: 400;
     font-size: 18px;
+    font-family: "roboto";
+    line-height: 24px;
+    margin-bottom: 5px
   }
 
   &__name,
   &__email {
     @include addBorder();
-    padding: 6px 10px;
+    padding: 0px 10px;
     font-weight: 500;
     font-size: 16px;
+    font-family: "roboto"
   }
 
   &__text {
@@ -105,6 +110,11 @@
     font-size: 16px;
     line-height: 100%;
     letter-spacing: 0px;
+    font-family: "roboto"
+  }
+
+  &__text::placeholder {
+    padding-top: 5px;
   }
 
   &__name:hover,
